fix tasks 1,6,8,9